# vkeng

./: .clang-format  CMakeLists.txt  CMakePresets.json
examples/: CMakeLists.txt  demo.cpp
include/vkeng/: app.hpp  graphics.hpp  vkeng.hpp
include/vkeng/graphics/: base.hpp  buffers.hpp  drawdata.hpp  frame.hpp  swapchain.hpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/graphics/: CMakeLists.txt  buffers.cpp  context.cpp  device.cpp  drawdata.cpp  frame.cpp  graphics.cpp  pipeline.cpp  swapchain.cpp
src/graphics/shaders/: CMakeLists.txt  main.cpp  shader.frag
